# vcolor_detection

./: .gitignore  cache_face_data.py  compress_image.py  configs.json  pyproject.toml  utils.py
inference/: face_check.py  hair_color_detection.py  run_generation.py
